--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 JWT_SECRET = kjvbdfkjvbdfjk
-MONGO_URI = mongodb+srv://insaneuser8410:RRWpL0LthIRk0O1d@devopsproject.7esbq.mongodb.net/?retryWrites=true&w=majority&appName=DevOpsProject
+MONGO_URI = mongodb+srv://<username>:<password>@devopsproject.7esbq.mongodb.net/?retryWrites=true&w=majority&appName=DevOpsProject
